# rbxlx-to-rojo

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml  test.yml
src/: cli.rs  filesystem.rs  gui.rs  lib.rs  main.rs  respected-services.txt  structures.rs  tests.rs  utils.rs
test-files/folders-with-scripts/: output.json
test-files/line-runner/: output.json
test-files/script-descendant-tests/: output.json
test-files/script-with-character-inside/: output.json
test-files/scripts-with-scripts/: output.json
test-files/sword/: output.json
