[package]
name = "rbxlx-to-rojo"
version = "1.0.1"
authors = ["Kampfkarren"]
edition = "2018"

[lib]
name = "rbxlx_to_rojo"
path = "src/lib.rs"

[[bin]]
name = "rbxlx-to-rojo"
path = "src/cli.rs"

[dependencies]
env_logger = "0.11.6"
lazy_static = "1.4"
log = "0.4.28"
rbx_binary = { git = "https://github.com/rojo-rbx/rbx-dom/", branch = "master" }
rbx_dom_weak = { git = "https://github.com/rojo-rbx/rbx-dom/", branch = "master" }
rbx_reflection = "5.0.0"
rbx_xml = { git = "https://github.com/rojo-rbx/rbx-dom/", branch = "master" }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"

# CLI
rbx_reflection_database = "1.0.3+roblox-666"
rfd = { version = "0.15.4", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.0"

[features]
gui = ["rfd"]
