[package]
name = "rbxlx-to-rojo"
version = "1.0.1"
authors = ["Kampfkarren"]
edition = "2018"

[lib]
name = "rbxlx_to_rojo"
path = "src/lib.rs"

[[bin]]
name = "rbxlx-to-rojo"
path = "src/cli.rs"

[dependencies]
env_logger = "0.11.6"
lazy_static = "1.4"
log = "0.4.28"
rbx_binary = "2.0.0"
rbx_dom_weak = "4.1.0"
rbx_reflection = "6.0.0"
rbx_xml = "2.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# CLI
rbx_reflection_database = "2.0.1"
rfd = { version = "0.15.4", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.0"

[features]
gui = ["rfd"]
